force-app/main/default/objects/Repayment_Schedule__c/fields/Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Reason__c</fullName>
    <label>Bounce Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Insufficient Funds</fullName>
        </value>
        <value>
            <fullName>Account Closed</fullName>
        </value>
        <value>
            <fullName>Signature Mismatch</fullName>
        </value>
        <value>
            <fullName>Other</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>