force-app/main/default/objects/Repayment_Schedule__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <label>Days Overdue</label>
    <formula>IF(AND(ISPICKVAL(Status__c, &quot;Pending&quot;), Due_Date__c &lt; TODAY()), TODAY() - Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>