force-app/main/default/objects/Repayment_Schedule__c/fields/EMI_Number__c.field-meta.xml
<CustomField>
    <fullName>EMI_Number__c</fullName>
    <label>EMI Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>