force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Component__c.field-meta.xml
<CustomField>
    <fullName>Interest_Component__c</fullName>
    <label>Interest Component</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>