force-app/main/default/objects/Repayment_Schedule__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>NACH</fullName>
        </value>
        <value>
            <fullName>UPI</fullName>
        </value>
        <value>
            <fullName>NEFT</fullName>
        </value>
        <value>
            <fullName>Cheque</fullName>
        </value>
        <value>
            <fullName>Cash</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>