force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Component__c.field-meta.xml
<CustomField>
    <fullName>Principal_Component__c</fullName>
    <label>Principal Component</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>