force-app/main/default/objects/Repayment_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Pending</fullName>
        </value>
        <value>
            <fullName>Paid</fullName>
        </value>
        <value>
            <fullName>Overdue</fullName>
        </value>
        <value>
            <fullName>Bounced</fullName>
        </value>
        <value>
            <fullName>Waived</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>