force-app/main/default/objects/Repayment_Schedule__c/fields/Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference__c</fullName>
    <label>Transaction Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>